# talent-plan

courses/rust/building-blocks/bb-1/meow/: Cargo.toml
courses/rust/building-blocks/bb-1/meow/src/: cli.yaml  main.rs
courses/rust/building-blocks/bb-2/exercise1/: Cargo.toml  output.json
courses/rust/building-blocks/bb-2/exercise1/src/: main.rs
courses/rust/building-blocks/bb-2/exercise2/: Cargo.toml  output.ron
courses/rust/building-blocks/bb-2/exercise2/src/: main.rs
courses/rust/building-blocks/bb-2/exercise3/: Cargo.toml  output.bson
courses/rust/building-blocks/bb-2/exercise3/src/: main.rs
courses/rust/projects/project-1-solution/kvs/: Cargo.toml
courses/rust/projects/project-1-solution/kvs/src/: lib.rs
courses/rust/projects/project-2-solution/kvs/: Cargo.toml
courses/rust/projects/project-2-solution/kvs/src/: error.rs  kv.rs  lib.rs
courses/rust/projects/project-2-solution/kvs/tests/: tests.rs
