[package]
name = "exercise2"
version = "0.1.0"
authors = ["popsky <sukong@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
