[package]
name = "exercise3"
version = "0.1.0"
authors = ["popsky <sukong@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`