[package]
name = "kvs"
version = "0.1.0"
authors = ["popsky <sukong@outlook.com>"]
edition = "2018"
description = "A inmemory key-value store."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.20"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[[bin]]
name = "kvs"
test = false

[lib]
test = false

