[package]
name = "kvs"
version = "0.1.0"
authors = ["popsky <sukong@outlook.com>"]
edition = "2018"
description = "A inmemory key-value store."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.20"
failure = "0.1.8"
failure_derive = "0.1.8"
bson = "1.0"
serde = { version = "1.0.117", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bin]]
name = "kvs"
test = false

[lib]
test = false

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`